--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  padding: 24px 36px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li {
+  padding: 3px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  padding: 6px 12px;
+  border: none;
+  box-shadow: 0 1px 1px hsl(240, 30%, 80%);
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.correct {
+  color: hsl(120, 40%, 50%);
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.incorrect {
+  color: hsl(0, 40%, 50%);
+  font-weight: 700;
+}
+
+.MultipleChoice {
+  margin-bottom: 48px;
 }
